<resources>


    <string name="app_name">Bookshelf</string>
    <string name="app_author">Created by: Miko Kauhanen</string>
    <string name="app_github" translatable="false">GitHub</string>
    <string name="app_github_URL" translatable="false">https://github.com/mkauha/Bookshelf</string>

    <string name="credits_data_links">Links:</string>
    <string name="credits_data_sources">Data sources:</string>
    <string name="credits_licenses">Licenses:</string>

    <string name="credits_data_sources_kirkanta" translatable="false">Kirkanta API v4</string>
    <string name="credits_data_sources_kirkanta_URL" translatable="false">https://api.kirjastot.fi/</string>
    <string name="credits_licenses_picasso" translatable="false">Picasso</string>
    <string name="credits_licenses_picasso_URL" translatable="false">https://square.github.io/picasso/#license</string>
    <string name="credits_licenses_mapbox" translatable="false">MapBox</string>
    <string name="credits_licenses_mapbox_URL" translatable="false">https://github.com/mapbox/mapbox-navigation-android/blob/master/LICENSE.md</string>
    <string name="credits_licenses_sortedlist" translatable="false">SortedListAdapter</string>
    <string name="credits_licenses_credits_licenses_sortedlist_URL" translatable="false">https://github.com/Wrdlbrnft/SortedListAdapter/blob/master/LICENSE</string>

    <string name="label_mybooks">My Books</string>
    <string name="label_library">Library</string>
    <string name="label_settings">Settings</string>
    <string name="label_search">Search</string>
    <string name="label_collections">Collections</string>
    <string name="label_menu">Menu</string>
    <string name="label_add_title">Add a book</string>
    <string name="label_save_book">Save</string>
    <string name="label_go_back">Exit without saving</string>
    <string name="label_add_barcode">ISBN</string>
    <string name="label_create_book">Create</string>
    <string name="label_edit_book">Edit</string>
    <string name="label_edit_book_dialog">Edit book</string>
    <string name="label_delete_book_dialog">Delete book</string>
    <string name="label_add_search">Search</string>
    <string name="label_image_select">Set cover image</string>
    <string name="label_image_select_file">File</string>
    <string name="label_image_select_camera">Camera</string>
    <string name="label_image_select_URL">URL</string>
    <string name="label_image_select_URL_title">Image URL</string>

    <string name="add_book">Add</string>
    <string name="search">Search</string>
    <string name="collection">Collection</string>
    <string name="collection_all_books">All Books</string>
    <string name="collection_wishlist">Wishlist</string>
    <string name="collection_study">Study</string>
    <string name="label_bookmark">Bookmark</string>
    <string name="add_bookmark">Set Bookmark</string>
    <string name="share">Share</string>
    <string name="add_wishlist">Add to Wishlist</string>
    <string name="choose_city">Choose library consortium</string>
    <string name="credits">About this app</string>
    <string name="search_hint">Search</string>
    <string name="edit_book">Edit book</string>
    <string name="book_image_hint">Add cover image</string>
    <string name="book_title_label">Title</string>
    <string name="book_author_label">Author</string>
    <string name="book_genre_label">Genre</string>
    <string name="book_genres_label">Genre</string>
    <string name="book_year_label">Year</string>
    <string name="book_pages_label">Pages</string>
    <string name="book_language_label">Language</string>
    <string name="book_summary_label">Summary</string>
    <string name="book_isbn_label">ISBN</string>
    <string name="book_collection_label">Collection</string>
    <string name="book_img_url">Image URL</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>


    <string name="move_to_owned_confirm">Move book to owned books?</string>
    <string name="move_to_owned">Book was moved to owned books.</string>

    <string name="library_open">Open</string>
    <string name="library_closed">Closed</string>
    <string name="title_activity_book_details" translatable="false">BookDetailsActivity</string>
    <string name="title_activity_create_book" translatable="false"></string>
</resources>
