<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_grey"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_add_book"
        android:icon="@drawable/ic_add_book"
        android:title="@string/add_book"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_change_consortium"
        android:icon="@drawable/ic_choose_city"
        android:title="@string/choose_city"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_credits"
        android:icon="@drawable/ic_credits"
        android:title="@string/credits"/>

</menu>