<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/navigationItemsTop"
        android:checkableBehavior="none">

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/label_settings" />
    </group>

    <group
        android:id="@+id/navigationItemsMid"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_books"
            android:icon="@drawable/ic_outline_book_24"
            android:title="@string/label_mybooks" />
        <item
            android:id="@+id/navigation_library"
            android:icon="@drawable/ic_outline_library_24"
            android:title="@string/label_library" />
        <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_outline_search_24"
            android:title="@string/label_search" />
    </group>

    <group android:id="@+id/controlItems">
        <item
            android:id="@+id/navigation_close"
            android:icon="@drawable/ic_outline_keyboard_arrow_down_24"
            android:title="" />
    </group>
</menu>