<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_credits_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="Logo"
        android:onClick="onClickLogo"
        app:srcCompat="@drawable/bookshelf_launcher" />

    <TextView
        android:id="@+id/dialog_credits_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_credits_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/app_author"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_credits_links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/credits_data_links"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_credits_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:onClick="onClickGithub"
        android:text="@string/app_github"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_credits_data_sources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/credits_data_sources"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_credits_api_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:onClick="onClickAPI"
        android:text="@string/credits_data_sources_kirkanta"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_credits_licenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/credits_licenses"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_credits_licenses_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:onClick="onClickSortedList"
        android:text="@string/credits_licenses_sortedlist"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_credits_licenses_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:onClick="onClickPicasso"
        android:text="@string/credits_licenses_picasso"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_credits_licenses_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:onClick="onClickMapBox"
        android:text="@string/credits_licenses_mapbox"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>