<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/select_image_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/image_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_image_select"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/image_select_ic_file"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/label_image_select_file"
        android:src="@drawable/ic_outline_insert_photo_24"
        app:layout_constraintEnd_toStartOf="@+id/image_select_ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_select_ic_camera" />

    <TextView
        android:id="@+id/image_select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_select_file"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/image_select_ic_file"
        app:layout_constraintStart_toStartOf="@+id/image_select_ic_file"
        app:layout_constraintTop_toBottomOf="@+id/image_select_ic_file" />

    <ImageButton
        android:id="@+id/image_select_ic_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/label_image_select_camera"
        android:src="@drawable/ic_outline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_select_title" />

    <TextView
        android:id="@+id/image_select_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_select_camera"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/image_select_ic_camera"
        app:layout_constraintStart_toStartOf="@id/image_select_ic_camera"
        app:layout_constraintTop_toBottomOf="@id/image_select_ic_camera" />

    <ImageButton
        android:id="@+id/image_select_ic_link"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/label_image_select_URL"
        android:src="@drawable/ic_outline_insert_link_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_select_ic_camera"
        app:layout_constraintTop_toTopOf="@+id/image_select_ic_camera" />

    <TextView
        android:id="@+id/image_select_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_select_URL"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/image_select_ic_link"
        app:layout_constraintStart_toStartOf="@+id/image_select_ic_link"
        app:layout_constraintTop_toBottomOf="@+id/image_select_ic_link" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />


</androidx.constraintlayout.widget.ConstraintLayout>