<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_bookdetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="55dp"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/fragment_bookdetails_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="BookDetailsFragment">

        <LinearLayout
            android:id="@+id/bookdetails_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bookdetails_cover_image"
                android:layout_width="wrap_content"
                android:layout_height="558dp"
                app:srcCompat="@drawable/book_cover_placeholder" />

            <TextView
                android:id="@+id/bookdetails_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textSize="24sp" />

            <TextView
                android:id="@+id/bookdetails_book_authors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_author_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookdetails_book_authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text=""
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bookdetails_book_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_year_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookdetails_book_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text=""
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bookdetails_book_language_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_language_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookdetails_book_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text=""
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bookdetails_book_pages_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/book_pages_label"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookdetails_book_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
