<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_book_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/add_book_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_add_title"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_book_sheet_ic_isbn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/label_add_barcode"
        android:src="@drawable/ic_outline_barcode_24"
        app:layout_constraintEnd_toStartOf="@+id/add_book_sheet_ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_book_sheet_ic_search" />

    <TextView
        android:id="@+id/add_book_sheet_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_barcode"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/add_book_sheet_ic_isbn"
        app:layout_constraintStart_toStartOf="@+id/add_book_sheet_ic_isbn"
        app:layout_constraintTop_toBottomOf="@+id/add_book_sheet_ic_isbn" />

    <ImageButton
        android:id="@+id/add_book_sheet_ic_search"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/label_add_search"
        android:src="@drawable/ic_outline_search_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_book_sheet_title" />

    <TextView
        android:id="@+id/add_book_sheet_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_search"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/add_book_sheet_ic_search"
        app:layout_constraintStart_toStartOf="@id/add_book_sheet_ic_search"
        app:layout_constraintTop_toBottomOf="@id/add_book_sheet_ic_search" />

    <ImageButton
        android:id="@+id/add_book_sheet_ic_manual"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/label_add_manual"
        android:src="@drawable/ic_outline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_book_sheet_ic_search"
        app:layout_constraintTop_toTopOf="@+id/add_book_sheet_ic_search" />

    <TextView
        android:id="@+id/add_book_sheet_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_manual"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/add_book_sheet_ic_manual"
        app:layout_constraintStart_toStartOf="@+id/add_book_sheet_ic_manual"
        app:layout_constraintTop_toBottomOf="@+id/add_book_sheet_ic_manual" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="124dp" />


</androidx.constraintlayout.widget.ConstraintLayout>